# attachment-service

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  flake.nix
.github/workflows/: docker.yml
proto/: attachments.proto
src/: grpc.rs  main.rs  services.rs  web.rs
src/grpc/: attachments.rs
src/services/: files.rs
