[package]
name = "attachment-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "attachment-service"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.56"
axum = "0.5.1"
chrono = "0.4.19"
dotenv = "0.15.0"
lazy_static = "1.4.0"
prost = "0.10.0"
regex = "1.5.5"
reqwest = "0.11.10"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.7.1"
tower-http = { version = "0.2.5", features = ["fs", "trace"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.7.0"
