[package]
name = "attachment-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "attachment-service"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
dotenv = "0.15.0"
lazy_static = "1.4.0"
prost = "0.12.6"
regex = "1.10.4"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.11.0", features = ["tls-webpki-roots"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.11.0"
